cncProd/force-app/main/default/objects/Service_Data_Pool__c/fields/Request_End_Point__c.field-meta.xml
<CustomField>
    <fullName>Request_End_Point__c</fullName>
    <label>Request End Point</label>
    <type>TextArea</type>
</CustomField>