cncProd/force-app/main/default/objects/Service_Data_Pool__c/fields/Request_Params__c.field-meta.xml
<CustomField>
    <fullName>Request_Params__c</fullName>
    <label>Request Params</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>