cncProd/force-app/main/default/objects/Service_Data_Pool__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <label>Service Name</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>