cncProd/force-app/main/default/objects/Service_Data_Pool__c/listViews/Book_TestDrive.listView-meta.xml
<ListView>
    <fullName>Book_TestDrive</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Reference_Id__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>equals</operation>
        <value>Book_TestDrive</value>
    </filters>
    <label>Book_TestDrive</label>
</ListView>