cncProd/force-app/main/default/objects/Service_Data_Pool__c/listViews/CBS.listView-meta.xml
<ListView>
    <fullName>CBS</fullName>
    <columns>NAME</columns>
    <columns>Reference_Id__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Service_Name__c</columns>
    <columns>Apex_Class__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>contains</operation>
        <value>UpdateCBSQueuable</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>9/30/2021 12:00 AM</value>
    </filters>
    <label>CBS</label>
</ListView>