cncProd/force-app/main/default/objects/Service_Data_Pool__c/listViews/Create_today_API.listView-meta.xml
<ListView>
    <fullName>Create_today_API</fullName>
    <columns>NAME</columns>
    <columns>Request_Params__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Service_Name__c</columns>
    <columns>Apex_Class__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Create today API</label>
</ListView>