cncProd/force-app/main/default/objects/Service_Data_Pool__c/listViews/Custom_API.listView-meta.xml
<ListView>
    <fullName>Custom_API</fullName>
    <columns>NAME</columns>
    <columns>Request_Params__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Service_Name__c</columns>
    <columns>Apex_Class__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>equals</operation>
        <value>DWH_AftersalesServiceHeader</value>
    </filters>
    <label>Custom API</label>
</ListView>