cncProd/force-app/main/default/objects/Service_Data_Pool__c/listViews/DWH_Get_Customer_Data.listView-meta.xml
<ListView>
    <fullName>DWH_Get_Customer_Data</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Reference_Id__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Name__c</field>
        <operation>equals</operation>
        <value>ContactSync</value>
    </filters>
    <label>DWH Get Customer Data</label>
</ListView>