cncProd/force-app/main/default/objects/Service_Data_Pool__c/listViews/DWH_Get_Reg_Veh_Sync.listView-meta.xml
<ListView>
    <fullName>DWH_Get_Reg_Veh_Sync</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Reference_Id__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Name__c</field>
        <operation>equals</operation>
        <value>RegisteredVehicleSync</value>
    </filters>
    <filters>
        <field>Apex_Class__c</field>
        <operation>equals</operation>
        <value>DWH_GetRegisteredVehicals_Data</value>
    </filters>
    <label>DWH Get Reg Veh Sync</label>
</ListView>