cncProd/force-app/main/default/objects/Service_Data_Pool__c/listViews/DWH_GetAllCustomer_Data.listView-meta.xml
<ListView>
    <fullName>DWH_GetAllCustomer_Data</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Reference_Id__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Apex_Class__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>contains</operation>
        <value>DWH_GetCustomer_Data</value>
    </filters>
    <label>_DWH_GetAllCustomer_Data</label>
</ListView>