cncProd/force-app/main/default/objects/Service_Data_Pool__c/listViews/DWH_GetCustomerData_PersonAccount.listView-meta.xml
<ListView>
    <fullName>DWH_GetCustomerData_PersonAccount</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Reference_Id__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>Request_End_Point__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>equals</operation>
        <value>DWH_GetCustomerData_PersonAccount</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>DWH_GetCustomerData_PersonAccount</label>
</ListView>