cncProd/force-app/main/default/objects/Service_Data_Pool__c/listViews/Eshop_checkout_API.listView-meta.xml
<ListView>
    <fullName>Eshop_checkout_API</fullName>
    <columns>NAME</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Apex_Class__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>equals</operation>
        <value>restDigitalPayment</value>
    </filters>
    <label>Eshop checkout API</label>
</ListView>