cncProd/force-app/main/default/objects/Service_Data_Pool__c/listViews/RAP_SF_UCS.listView-meta.xml
<ListView>
    <fullName>RAP_SF_UCS</fullName>
    <columns>NAME</columns>
    <columns>Request_Params__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Service_Name__c</columns>
    <columns>Apex_Class__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>equals</operation>
        <value>RAPUpdateTransactionAPI</value>
    </filters>
    <label>RAP:  SF-UCS</label>
    <sharedTo>
        <group>RAP_Admin</group>
    </sharedTo>
</ListView>