cncProd/force-app/main/default/objects/Service_Data_Pool__c/listViews/Registered_Vehicle2.listView-meta.xml
<ListView>
    <fullName>Registered_Vehicle2</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class__c</columns>
    <columns>Request_Method__c</columns>
    <columns>Created_DateTime__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>Request_End_Point__c</columns>
    <columns>Service_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_End_Point__c</field>
        <operation>contains</operation>
        <value>DWH</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>DWH_Today</label>
</ListView>